syntax = "proto3";

package pb;
option go_package = "/pkg/pb;pb";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc SendAuthKey (AuthRequest) returns (AuthResponse);
  rpc AuthKeyStream (stream AuthRequest) returns (stream AuthKey);
}

message RegisterRequest {
  string phone_number = 1;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message AuthRequest {
  string phone_number = 1;
  string auth_key = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
}

message AuthKey {
  string phone_number = 1;
  string auth_key = 2;
}